--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,9 +14,11 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 {% for page in site.pages %}
+                {% if page.navigation != false %}
                 <li>
                     <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
                 </li>
+                {% endif %}
                 {% endfor %}
             </ul>
           </div><!-- /.navbar-collapse -->
